Updated style.css with @media rules to fix the about section on mobile

--- a/style.css
+++ b/style.css
@@ -324,4 +324,10 @@ footer {
     .audio-sample {
         min-width: 90vw;
     }
+    .about {
+        font-size: 1rem;
+        text-align: left;
+        padding-left: 1.2rem;
+        padding-right: 1.2rem;
+    }
 }
